source/stylesheets/features/us-healthcare.css.scss
/* GENERAL STYLING */
@import "../base/core";
@import url(http://fonts.googleapis.com/css?family=Lato:400,900);

$light-black: #222;
$light-grey:#dedede;
$dark-grey:#9a9a9a;
$black : #000;
$light-blue:rgb(177, 205, 234); 
$light-blue-hover:rgb(142, 175, 208);
$light-blue-selected: rgb(106, 141, 177);

#article-nav {
  position: fixed;
  left: 0;
  width: 100%;
  top: 55px;
  background-color: rgba(0, 0, 0, 0.81);
  text-align: center;
  box-shadow: 0px -2px 7px;
  z-index: 1000;
  @media only screen and (max-width: 768px) {
      display: none;
  }
  
  ul {
    margin: 0 auto;
    
    li {
      display: inline-block;
      white-space: nowrap;
      width: calc(100% / 8);
      text-align: center;
      margin: auto;
      padding: 8px;
      cursor: pointer;
      a {
        color: rgba(255,255,255,0.8);
        text-align: center;
        &:hover {
            color:rgba(255,255,255,1);
            text-decoration: none;
        }
      }
    }
  }
}

strong {
  font-weight: 800; 
}

.stuff-below-nav {
  height: calc(100% - 90px);
  position: fixed;
  bottom: 0;
  overflow: scroll;
  background-color: white;
  @media only screen and (max-width: 768px) {
      height: calc(100% - 50px);
  }
}

.jumbotron {
  color: white;
  height: 80vh;
  text-align: center;
  background: url("/images/features/us-healthcare/jumbotron3.jpg");
  background-size: cover;
  
  @media only screen and (max-width: 768px){
    margin-bottom: 10px; 
  }

  .footnote {
      font-size: 0px;
  }
}

.container .jumbotron{
    border-radius: 0px;
}

.layer {
  background-color: rgba(0, 0, 0, .5);
  width: 100%;
  height: 80vh;
  top: 0;
  left: 0;
  padding-top: 35vh;
  position: absolute;
}

header p{
  text-align: center;
}


#medical-bill {
//  height: 200px;
  width: 180px;
  position: fixed;
  top: 30%;
  right: 5px;
  background-color: rgba(255, 255, 255, 0.75);
  padding: 5px;
  z-index: 1000;
  transition: all 350ms ease-in-out;
  border-radius: 8px;
  border-style: solid;
  border-width: 1px;
  border-color: $light-blue-selected;
  td {
    transition: inherit;
    padding: 6px;
    
    &:first-of-type {
      min-width: 96px; 
    }
  }
  opacity: 0;
  pointer-events: none;
  
  &.is-visible {
    opacity: 1;
    pointer-events: auto;
  }
  @media only screen and (max-width: 1150px){
    width: 80px; 
    height: 60px;
    overflow: hidden;
    background-color: rgba(255, 255, 255, 0.75);
  }
}

#medical-bill:hover {
  @media only screen and (max-width: 1150px){
    width: 180px;
    height: auto;
    
  }
}

[data-reason="total"] {
  font-weight: bold;
}

h1 {
  font-family: "Lato", sans-serif;
  font-weight: 900;
  font-size: 3em;
  letter-spacing: 0.03em;
  
  @media only screen and (max-width: 768px){
    font-size: 2em; 
  }
}

h5 {
  font-size: 1.25em; 
}

p {
    font-size: 1.25em;
    display: block;
    margin: 1em 0;
    line-height: 150%;
    text-align: left;
}

article, footer {
  width: 70%;
  margin: 0 auto;
  padding: 40px 0px 40px;
  
  @media only screen and (max-width: 768px){
    padding: 20px 0px 20px;
    width: 85%;
  }
  @media only screen and (min-width: 1200px){
    padding: 40px 0px 40px;
    width: 840px;
  }
  
}

article h2, article h1 {
  text-align: center;
  font-family: "Lato", sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  font-size: 1.5em;
}

h3 {
    text-align: center;
    font-size: 1.25em;
}

a:link {
    color: #585858;
}
a:visited{
    color: #585858;
    text-decoration: none;
}
a:active{
    text-decoration: none;
}
a:hover {
    color: #383838;
    text-decoration: none;
}

/* TABLE */

.previous-successes {
    margin: auto;
  
  @media only screen and (max-width: 768px) {
    .col-sm-4 {
      margin-top: 2em;   
    }
  }
}

.centeredImage {
    text-align: center;
    margin: 0 auto;
}


#cost-comparison-boston-chart {
  position: relative;
//  padding-left: 2.5%;
//  padding-right: 2.5%;
}

#cost-comparison-boston-container {
    text-align: center;
}

#cost-comparison-boston-container p {
    text-align: center;
}



/* SLIDE DOWN */
.slide-panel {
  display:none;
  background-color: #fff;
  margin: auto;
  text-align: left;
  padding: 0% 5%;
  padding-top: 10px;
  padding-bottom: 75px;
  
  p {
    font-size: 1em;
  }
}



span.slide {
  font-weight: 600;
  background-color: rgba(242, 224, 84, 0.55);
  cursor: pointer;
  padding:0 5px;
}

span.slide:hover {
  background-color: rgb(242, 224, 84);
}

.embed-extra-info {
    position: relative;
    padding-bottom: 75%;
    padding-top: 35px;
    overflow: hidden;
    margin: 0 auto;
}

.embed-extra-info iframe {
    position: absolute;
    top:20px;
    left: 12.5%;
    height: 75%;
    width: 75%;

}

#p-slide {
    display: inline;
}

/* STORY */
#story {
    width: 70%;
    margin: auto;
    text-align: left;
}


/********* CECILE'S GRAPHS *********/
#triple-graph {
  width: 100%;
  max-height: 70%;
}

p.tab_p {
  text-align: center;
  padding-top: 1em;
}

/* TABS */


#triple-graph .tab-link {
  padding: 10px;
  background-color: $light-grey;
  width: 100%;
  text-align: center;
  border:solid 1px #fff;
  vertical-align: center;
  border-radius:8px;
  color: black;
  cursor: pointer;
  transition: .2s ease-in-out;
}

#triple-graph .col-sm-4{
  padding: 0;
}
#triple-graph .row {
  margin: 0;
}

.container{
    width: 100%;
    padding: 0px;
    margin: 0;
}

#triple-graph .tab-link.current {
  background-color: $dark-grey;
}

#triple-graph .tab-link:hover {
//  background-color: lighten($light-grey,6%);
  transform: (scale(1.1));
}

.tab-content{
  display: none;
  background: #fff;
  &.current {
    display: inherit; 
  }
  
  p {
    width: 70%;
    margin: 0 auto;
    margin-bottom: 1em;
    
    @media only screen and (max-width: 768px){
      padding: 20px 0px 20px;
      width: 85%;
      margin-bottom: 0px;
    } 
  }
}


/* end tabs */

#spending-capita-chart {
    position: relative;
    margin: 0;
}
/* ... */

